<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3"/>

    <TextView
        android:id="@+id/tv_sender_country_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:text="@string/sender_country"
        android:gravity="end"
        android:textSize="16sp"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/tv_receiver_country_title"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sender_country_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_sender_country_title"
        app:layout_constraintBottom_toBottomOf="@id/tv_sender_country_title"/>


    <TextView
        android:id="@+id/tv_receiver_country_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:text="@string/receiver_country"
        android:gravity="end"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sender_country_title"
        app:layout_constraintBottom_toTopOf="@id/tv_exchange_rate_title"
        app:layout_constraintEnd_toStartOf="@id/guideline"/>

    <TextView
        android:id="@+id/tv_receiver_country_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_receiver_country_title"
        app:layout_constraintBottom_toBottomOf="@id/tv_receiver_country_title"/>

    <TextView
        android:id="@+id/tv_exchange_rate_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:text="@string/exchange_rate"
        android:gravity="end"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_receiver_country_title"
        app:layout_constraintBottom_toTopOf="@id/tv_timestamp_title"/>

    <TextView
        android:id="@+id/tv_exchange_rate_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toStartOf="@id/tv_exchange_rate_code"
        app:layout_constraintTop_toTopOf="@id/tv_exchange_rate_title"
        app:layout_constraintBottom_toBottomOf="@id/tv_exchange_rate_title"/>

    <TextView
        android:id="@+id/tv_exchange_rate_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/tv_exchange_rate_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_exchange_rate_title"
        app:layout_constraintBottom_toBottomOf="@id/tv_exchange_rate_title"/>

    <TextView
        android:id="@+id/tv_timestamp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:text="@string/timestamp"
        android:gravity="end"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_exchange_rate_title"
        app:layout_constraintBottom_toTopOf="@id/tv_remittance_title"/>

    <TextView
        android:id="@+id/tv_timestamp_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_timestamp_title"
        app:layout_constraintBottom_toBottomOf="@id/tv_timestamp_title"/>

    <TextView
        android:id="@+id/tv_remittance_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:text="@string/remittance"
        android:gravity="end"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_timestamp_title"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/et_remittance_content"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textSize="16sp"
        android:inputType="number"
        android:maxLength="10"
        android:maxLines="1"
        android:autofillHints="@null"
        android:hint="@null"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toStartOf="@id/tv_remittance_currency_code"
        app:layout_constraintTop_toTopOf="@id/tv_remittance_title"
        app:layout_constraintBottom_toBottomOf="@id/tv_remittance_title"/>

    <TextView
        android:id="@+id/tv_remittance_currency_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/et_remittance_content"
        app:layout_constraintTop_toTopOf="@id/tv_remittance_title"
        app:layout_constraintBottom_toBottomOf="@id/tv_remittance_title"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/tv_amount_received"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_remittance_title"
        app:layout_constraintBottom_toTopOf="@id/spinner"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        android:background="@null"
        android:popupElevation="0dp"
        android:gravity="center"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>